--- a/jp-activities.html
+++ b/jp-activities.html
@@ -375,8 +375,8 @@
         <h3 id="logo" style="text-align:center;">
           <img class="hidden-mobile" src="images/banner_cns6_left.gif" width="155" />
           <div style="margin-bottom: 15px;"></div>
-          <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
-            <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博 士<rt>エネルギー</rt>
+          <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">しゅい</text></rt></ruby>
+            <ruby>泓<rt><text style="letter-spacing: -4px;">ほーん</text></rt></ruby> <small><ruby>博 士<rt>エネルギー</rt>
               </ruby></small>
           </h3>
           <!--<h3 class="hidden-mobile" align="left">徐 泓 <small>博 士</small></h3> -->
@@ -460,9 +460,10 @@
           ">
           </div>
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
+
       </div>
 
-      <p class="hidden-mobile" style="margin: -3px 0 0 0; padding: 0; height: 0px;"></p>
+      <p class="hidden-mobile" style="margin: -6px 0 0 0; padding: 0; height: 0px;"></p>
 
 
       <p class="hidden-mobile"></p>
@@ -496,8 +497,8 @@
 
       <div class="topnav">
         <a href="jp-activities.html" class="active">
-          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
-            <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
+          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">しゅい</text></rt></ruby>
+            <ruby>泓<rt><text style="letter-spacing: -4px;">ほーん</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
               </ruby></small>
           </h3>
         </a>
