--- a/jp-contact.html
+++ b/jp-contact.html
@@ -317,8 +317,8 @@
         <h3 id="logo" style="text-align:center;">
           <img class="hidden-mobile" src="images/banner_cns2_left.gif" width="155" />
           <div style="margin-bottom: 15px;"></div>
-          <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
-            <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博 士<rt>エネルギー</rt>
+          <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">しゅい</text></rt></ruby>
+            <ruby>泓<rt><text style="letter-spacing: -4px;">ほーん</text></rt></ruby> <small><ruby>博 士<rt>エネルギー</rt>
               </ruby></small>
           </h3>
           <!--<h3 class="hidden-mobile" align="left">徐 泓 <small>博 士</small></h3> -->
@@ -426,8 +426,8 @@
 
       <div class="topnav">
         <a href="jp-contact.html" class="active">
-          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">シュイ</text></rt></ruby>
-            <ruby>泓<rt><text style="letter-spacing: -4px;">ホーン</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
+          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -4px;">しゅい</text></rt></ruby>
+            <ruby>泓<rt><text style="letter-spacing: -4px;">ほーん</text></rt></ruby> <small><ruby>博士<rt>エネルギー</rt>
               </ruby></small>
           </h3>
         </a>
