--- a/ar.html
+++ b/ar.html
@@ -166,14 +166,20 @@
       const countries = await fetchCountries();
       const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
       const data = await response.json();
-      const countryCode = data.country;
+      const countryCode = data.country.toLowerCase();
       const language = 'ar'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode, language);
+      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
+      
       document.getElementById("location").textContent = countryName;
       document.getElementById("location2").textContent = countryName;
-      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
+      document.getElementById("country-flag").src = `./images/wflags/${countryCode.toLowerCase()}.png`;
       document.getElementById("country-flag").alt = countryName;
     }
+
+
+    console.log('ipinfo data=', data);
+console.log('countryCode raw=', data && data.country);
+console.log('constructed path (lower)=', `/images/wflags/${String(data?.country||'un').trim().toLowerCase()}.png`);
 
     document.addEventListener('DOMContentLoaded', displayCountryName);
   </script>
