--- a/cn.html
+++ b/cn.html
@@ -136,6 +136,13 @@
                 display: none;
             }
         }
+
+
+        .flag-img {
+          height: 23px;
+          display: inline-block;
+          vertical-align: middle;
+}
     </style>
 
 
@@ -329,9 +336,8 @@
           const regionEnglish = data.region || "";
           const cityEnglish = data.city || "";
     
-
           // 调试信息
-          console.log("调试信息 → cityEnglish:", cityEnglish, "regionEnglish:", regionEnglish, "countryCode:", countryCode);
+          // console.log("调试信息 → cityEnglish:", cityEnglish, "regionEnglish:", regionEnglish, "countryCode:", countryCode);
 
 
           // 遍历 cityArray 查找匹配
@@ -523,12 +529,12 @@
               </span>
 
                 <span style="float:right; font-family:verdana">
-                    <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
-                      <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
-                          style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
-                          style="height:23px;display:inline-block;top:7px;position:relative;"> <img src="images/flag_mc.png"
-                          alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
-                        繁</a></span>&nbsp;<select id="languages" name="languages"
+                  <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
+                    <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
+                        style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
+                        style="height:23px;display:inline-block;top:7px;position:relative;"> <img src="images/flag_mc.png"
+                        alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
+                      繁</a></span>&nbsp;<select id="languages" name="languages"
                       style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
                       onchange="window.location.href=this.options [this.selectedIndex].value">
                       <option value="cn.html" select>中文</option>
