--- a/cn-contact.html
+++ b/cn-contact.html
@@ -184,6 +184,7 @@
     }
   </style>
 
+<script src="js/language_cn.js"></script>
 
   <nav class="display-mobile">
 
@@ -284,39 +285,6 @@
   <!-- 引入 pinyin.js 库 -->
   <!-- <script src="/js/pinyin.js"></script> -->
 
-  <script type="module">
-    async function fetchCountries() {
-      const response = await fetch('/js/countries.json');
-      const countries = await response.json();
-      return countries;
-    }
-
-    function getCountryNameByCode(countries, code, language = 'english') {
-      const country = countries.find(country => country.abbr === code);
-
-      if (country) {
-        return country[language] || country.english;
-      } else {
-        return '地球';
-      }
-    }
-
-    async function displayCountryInfo() {
-      const countries = await fetchCountries();
-      const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
-      const data = await response.json();
-      const countryCode = data.country.toLowerCase();
-      const language = 'chinese'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
-
-      document.getElementById("location").textContent = countryName;
-      document.getElementById("location2").textContent = countryName;
-      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
-      document.getElementById("country-flag").alt = countryName;
-    }
-
-    document.addEventListener('DOMContentLoaded', displayCountryInfo);
-  </script>
 
   <script type="text/javascript" src="/js/block_save_as.js"></script>
 
@@ -452,13 +420,18 @@
 
         <span style="float:right; font-family:verdana">
           <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
-            <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
-                style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
-                style="height:23px;display:inline-block;top:7px;position:relative;"> <img src="images/flag_mc.png"
-                alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
-              繁</a></span>&nbsp;<select id="languages" name="languages"
-            style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
-            onchange="window.location.href=this.options [this.selectedIndex].value">
+            <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="./images/wflags_svg/cn.svg" alt="flag"
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="simplifed-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover; margin-left:5px; margin-right:0px;"
+              alt="flag">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="./images/wflags_svg/hk.svg" alt="flag"
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="traditional-add-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit:cover; margin-left:5px;"
+              alt="flag"><img id="traditional-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover;left: 5px;"
+              alt="flag">
+              &nbsp;繁</a></span>&nbsp;<select id="languages" name="languages"
+              style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
+              onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="cn.html" select>中文</option>
             <option value="jp.html">日本語</option>
             <option value="kr.html">한국어</option>
