--- a/cn-resume.html
+++ b/cn-resume.html
@@ -152,6 +152,7 @@
     }
   </style>
 
+<script src="js/language_cn.js"></script>
 
 
   <!-- block save as
@@ -437,13 +438,18 @@
 
         <span style="float:right; font-family:verdana">
           <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
-            <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="images/flag_cn.png" alt="flag"
-                style="height:23px;display:inline-block;top:7px;position:relative;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="images/flag_hk.png" alt="flag"
-                style="height:23px;display:inline-block;top:7px;position:relative;"> <img src="images/flag_mc.png"
-                alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
-              繁</a></span>&nbsp;<select id="languages" name="languages"
-            style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
-            onchange="window.location.href=this.options [this.selectedIndex].value">
+            <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="./images/wflags_svg/cn.svg" alt="flag"
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="simplifed-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover; margin-left:5px; margin-right:0px;"
+              alt="flag">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="./images/wflags_svg/hk.svg" alt="flag"
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="traditional-add-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit:cover; margin-left:5px;"
+              alt="flag"><img id="traditional-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover;left: 5px;"
+              alt="flag">
+              &nbsp;繁</a></span>&nbsp;<select id="languages" name="languages"
+              style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
+              onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="cn-resume.html" select>中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
