--- a/en.html
+++ b/en.html
@@ -199,6 +199,8 @@
       top: 6px;
     }
 
+
+
   </style>
 
 <script src="js/language_en.js"></script>
@@ -211,91 +213,54 @@
     <div class='nav-container'>
       <div>
         <a class='slide' href='#'>
+          <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <span class='name'><a href="en.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='en.html'>
           <span class='element'>H</span>
-          <span class='name'>Hong</span>
+          <span class='name'>Home</span>
         </a>
       </div>
       <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed</span>
-          <span class='name'>Education</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
+        <a class='slide' href='en-research.html'>
           <span class='element'>Re</span>
           <span class='name'>Research</span>
         </a>
       </div>
       <div>
-        <a class='slide' href='#publications'>
+        <a class='slide' href='en-research.html#publications'>
           <span class='element'>Pb</span>
-          <span class='name'>Publication</span>
+          <span class='name'>Publications</span>
         </a>
       </div>
       <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Ad</span>
-          <span class='name'>Awards</span>
+        <a class='slide' href='en-resume.html'>
+          <span class='element'>Ed</span>
+          <span class='name'>Education</span>
         </a>
       </div>
+
+      <div>
+        <a class='slide' href='en-activities.html'>
+          <span class='element'>At</span>
+          <span class='name'>Activities</span>
+        </a>
+      </div>
+
       <div>
         <a class='slide' href='en-contact.html'>
-          <span class='element'>C</span>
+          <span class='element'>Co</span>
           <span class='name'>Contact</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>Weibo</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>Wechat</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>Tiktok</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>XiaoHS</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>Bilibili</span>
         </a>
       </div>
 
     </div>
   </nav>
+
+  <div class="display-mobile" style="height: 60px;"></div> 
+  <!-- 60px 替换为你的导航实际高度 -->
 
 </head>
 
@@ -355,6 +320,10 @@
       </nav>
 
     </div>
+
+
+
+
 
     <!-- Content -->
     <div class="twelve columns offset-by-four content">
@@ -515,6 +484,10 @@
           </a></strong>
       </div>
 
+
+
+
+      
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
         <text style="color:rgb(237, 118, 7);font-size:15px">➔ Hey, Welcome! </text>
         <span style="float:right;">
