--- a/en.html
+++ b/en.html
@@ -218,7 +218,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='en.html'>
+        <a class='slide' href='en.html' 、">
           <span class='element'>H</span>
           <span class='name'>Home</span>
         </a>
