--- a/de-research.html
+++ b/de-research.html
@@ -164,96 +164,58 @@
   </script>
 
 
-  <nav class="display-mobile">
+<nav class="display-mobile">
 
-    <div class='nav-container'>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>H</span>
-          <span class='name'>Hong</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ab</span>
-          <span class='name'>Ausbildung</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>Fs</span>
-          <span class='name'>Forschung</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb</span>
-          <span class='name'>Publikation</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Pr</span>
-          <span class='name'>Preise</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='de-contact.html'>
-          <span class='element'>K</span>
-          <span class='name'>Kontakt</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>Weibo</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>Wechat</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>Tiktok</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>XiaoHS</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>Bilibili</span>
-        </a>
-      </div>
-
+  <div class='nav-container'>
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'><a href="de.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+      </a>
     </div>
-  </nav>
+    <div>
+      <a class='slide' href='de.html'>
+        <span class='element'>H</span>
+        <span class='name'>Höme</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='de-research.html'>
+        <span class='element'>Fs</span>
+        <span class='name'>Forschung</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='de-research.html#publications'>
+        <span class='element'>Pb</span>
+        <span class='name'>Publikation</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='de-resume.html'>
+        <span class='element'>Au</span>
+        <span class='name'>Ausbildung</span>
+      </a>
+    </div>
+
+    <div>
+      <a class='slide' href='de-activities.html'>
+        <span class='element'>Ak</span>
+        <span class='name'>Aktivität</span>
+      </a>
+    </div>
+
+    <div>
+      <a class='slide' href='de-contact.html'>
+        <span class='element'>Ko</span>
+        <span class='name'>Kontakt</span>
+      </a>
+    </div>
+
+  </div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div> 
+<!-- 60px 替换为你的导航实际高度 -->
 
 </head>
 
