--- a/es-contact.html
+++ b/es-contact.html
@@ -165,96 +165,58 @@
     }
   </script>
 
-  <nav class="display-mobile">
+<nav class="display-mobile">
 
-    <div class='nav-container'>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>H</span>
-          <span class='name'>Hóng</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#education'>
-          <span class='element'>Ed</span>
-          <span class='name'>Educación</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#research-interests'>
-          <span class='element'>In</span>
-          <span class='name'>Investigación</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#publications'>
-          <span class='element'>Pb</span>
-          <span class='name'>Publicaciones</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#awards'>
-          <span class='element'>Pr</span>
-          <span class='name'>Premios</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='es-contact.html'>
-          <span class='element'>C</span>
-          <span class='name'>Contact</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>Li</span>
-          <span class='name'>LinkedIn</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wb&nbsp;&nbsp;</span>
-          <span class='name'>Weibo</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Wx&nbsp;&nbsp;</span>
-          <span class='name'>Wechat</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Dy&nbsp;&nbsp;</span>
-          <span class='name'>Tiktok</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Xh&nbsp;&nbsp;</span>
-          <span class='name'>XiaoHS</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='#'>
-          <span class='element'>Bi&nbsp;&nbsp;</span>
-          <span class='name'>Bilibili</span>
-        </a>
-      </div>
-
+  <div class='nav-container'>
+    <div>
+      <a class='slide' href='#'>
+        <span class='element'>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class='name'><a href="es.html"><img src="./images/logo.png" style="width:30px; position:relative; top:-30px; left:6px;"></a></span>
+      </a>
     </div>
-  </nav>
+    <div>
+      <a class='slide' href='es.html'>
+        <span class='element'>H</span>
+        <span class='name'>Home</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='es-research.html'>
+        <span class='element'>In</span>
+        <span class='name'>Investigación</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='es-research.html#publications'>
+        <span class='element'>Pb</span>
+        <span class='name'>Publicacion</span>
+      </a>
+    </div>
+    <div>
+      <a class='slide' href='es-resume.html'>
+        <span class='element'>Ed</span>
+        <span class='name'>Educación</span>
+      </a>
+    </div>
+
+    <div>
+      <a class='slide' href='es-activities.html'>
+        <span class='element'>Ac</span>
+        <span class='name'>Actividad</span>
+      </a>
+    </div>
+
+    <div>
+      <a class='slide' href='es-contact.html'>
+        <span class='element'>Co</span>
+        <span class='name'>Contacto</span>
+      </a>
+    </div>
+
+  </div>
+</nav>
+<div class="display-mobile" style="height: 60px;"></div> 
+<!-- 60px 替换为你的导航实际高度 -->
 
 </head>
 
